Colored Stats - https://github.com/pret/pokeemerald/wiki/Colored-stats-by-nature-in-summary-screen

IV/EV Stat Display - https://www.pokecommunity.com/showpost.php?p=10161688&postcount=77
	-EVs are red, IVs are blue
	-Changed to a rolling page system
	-Added L/R button icon

Default options changed - https://www.pokecommunity.com/showpost.php?p=9967853&postcount=5

Can unlearn any attack - https://www.pokecommunity.com/showpost.php?p=10182839&postcount=119

Reusable TMs - https://www.pokecommunity.com/showpost.php?p=9980343&postcount=7

Can only buy TM/HM once - https://github.com/LOuroboros/pokeemerald/commit/2e6af4e1c4a55e100882d0ccb009d91cef8c0259

B/W Repel System - https://www.pokecommunity.com/showpost.php?p=9986048&postcount=9